# cisco-nxapi-wrapper

./: .gitignore  Dockerfile  README.docx  README.md  ResultFile.py  SwitchConnection.py  example_output_1.json  example_output_2.json  example_rmoEtherStats.json  example_transceiver_details.json  main.py  main_test.py  ndfc_requests.py  nxapi_requests.py  nxapi_requets.py  pyproject.toml  requirements.txt  response_wrapper.py  result_demo_all.txt  result_file.py  switch_connection.py  utils.py
demo_json/10.10.10.1/ins/: show_logging_logfile_|_grep_-i_ptp.json  show_ptp_clock.json  show_ptp_corrections.json  show_ptp_parent.json
demo_json/10.10.10.1/mo/: sys.json
demo_json/10.10.10.2/class/: ethpmPhysIf.json  faultInst.json  rmonEtherStats.json
demo_json/10.10.10.2/ins/: show_logging_logfile_|_grep_-i_ptp.json  show_ptp_clock.json  show_ptp_corrections.json  show_ptp_parent.json
demo_json/10.10.10.2/mo/: sys.json
demo_json/class/: ethpmPhysIf.json  stpIf.json
demo_json/ins/: show_interface_transceiver_details.json
demo_json/mo/: sys.json
src/: README.docx  ndfc_requests.py  nxapi_requests.py  result_file.py  switch_connection.py  utils.py
