[project]
name = "cisco-nxapi-wrapper"
version = "0.1.0"
description = "A program to maintain Cisco switches through NX-API calls"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "glom>=23.5.0",
    "mypy>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
